# beam

./: .dockerignore  .gitignore  LICENSE  Pipfile  README.md  actions.yml  beam.sh  demo-docker.sh  demo.sh  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: beam.yml  python-app.yml
data/: cloud_domains.json  key_domains.json
demo/: README.md
docker/: Dockerfile.all-in-one  Dockerfile.beam-core  Dockerfile.database  Dockerfile.demo  Dockerfile.trainer  Dockerfile.zeek  README_new.md  beam-docker.sh  run-demo.sh  setup-environment.sh
docker/llama/: Dockerfile
docker/scripts/: healthcheck.sh  init_database.py  process_pcap.sh
dockerfiles/: Dockerfile.all-in-one  Dockerfile.database  Dockerfile.zeek  README.md  run-demo.sh
models/: col_transform.pkl  feature_names.pkl  supply_chain_combined_app_model.pkl
models/custom_models/: README.md
src/beam/: __main__.py  constants.py  demo.py  detect.py  detect_direct.py  enrich.py  features.py  har.py  logging.conf  logging_docker.conf  run.py  services.py  strings.txt  train_direct.py  utils.py  zeek.py
src/beam/detector/: detect.py  ensemble.py  explainer.py  features.py  models.py  security_report.py  trainer.py  trainer.py.backup  utils.py
src/beam/mapper/: agent_parser.py  data_sources.py  datastore.py  gemini.py  gemini_fixed.py  gemini_old.py  llama.py  llm.py  mapper.py
src/beam/parser/: har.py  models.py  zeek.py
tests/: conftest.py  test_auto_discovery.py  test_custom_model_training.py  test_datastore.py  test_detection.py  test_mapper.py  test_training.py  test_training_cli.py  test_training_integration.py
tests/fixtures/: mock_app_features.json  mock_enriched_events.json  mock_har_file.har
