[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "beam"
version = "0.1.0"
authors = [
    { name = "Dagmawi Mulugeta", email = "dmulugeta@netskope.com" },
    { name = "Colin Estep", email = "cestep@netskope.com" }
]
description = "Behavioral Evaluation of Application Metrics"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
dependencies = [
    "asyncio",
    "google-generativeai",
    "httpagentparser", 
    "ipython",
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic",
    "pytest",
    "scikit-learn==1.5.0",
    "shap",
    "typing-extensions",
    "ua-parser",
    "user-agents"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]