[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "beam"
version = "0.1.0"
authors = [
    { name = "Mohanraj Ravichandran", email = "mravichandran@netskope.com" },
    { name = "Dagmawi Mulugeta", email = "dmulugeta@netskope.com" },
    { name = "Colin Estep", email = "cestep@netskope.com" }
]
description = "Behavioral Evaluation of Application Metrics"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]